--- a/content/web/220511_blog_0.mdx
+++ b/content/web/220511_blog_0.mdx
@@ -5,10 +5,6 @@ category: "web"
 idx: "1"
 ---
 
-## 0. 블로그 만들기
-
----
-
 깃 블로그를 만들고 첫 번째로 쓰는 글의 주제로 무엇을 다룰까 하다가 블로그를 만들게 된 계기부터 시작해서 블로그를 만드는 과정을 글로 정리 해보려고 한다. 블로그는 아직 미완성이지만, 글을 작성하고, 그 글을 읽을 수 있을 수준까지는 완성되었기에 첫 포스트를 작성 해본다.
 
 사실 이전부터 블로그를 만드는 필요성에 대해서는 느끼고 있었다. 어디에 저장되어 있는 지도 모르는 강의 자료, 잘 기억이 나지 않는 강의 내용, 본인이 현재 운영하고 있는 블로그가 있다면 주소를 기입하라는 기업들의 입사지원 페이지 등 만일 신이 나타나 신입생 시절로 시간을 되돌려 준다면 첫 번째로 비트 코인을 살 것이고, 두 번째로 블로그를 만들어 보겠다는 다짐을 할 정도로 그 필요성에 대해 격렬히 통감하던 와중이었다. 그 동안 귀찮음을 핑계로 차일피일 미루기만 해오다 수 년이 지났지만, 이번 기회에 블로그를 만들어 지난 4년간 배운 내용을 하나하나 작성해나갈 것이다.
@@ -23,4 +19,4 @@ idx: "1"
 - gatsby - react 기반
 - hexo - nodejs 기반
 
-가 있는데, 이 중 ruby는 사용해 본 적이 없고, nodejs보다는 학교 과제로 여러 프로젝트들을 진행하면서 사용한 react가 나에게 좀 더 친숙했기에 gatsby를 사용하여 내 입맛대로 커스터마이징 할 수 있는 블로그를 만들어 보기로 했다.
+가 있는데, 이 중 ruby는 사용해 본 적이 없고, nodejs보다는 학교 과제로 여러 프로젝트들을 진행하면서 사용한 react가 나에게 좀 더 친숙했기에 gatsby를 사용하여 내 마음대로 커스터마이징 할 수 있는 블로그를 만들어 보기로 했다.
