--- a/content/web/220511_blog_0.mdx
+++ b/content/web/220511_blog_0.mdx
@@ -1,5 +1,5 @@
 ---
-title: "0. 블로그 만들기asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
+title: "0. 블로그 만들기"
 date: "2022-05-11"
 category: "web"
 idx: "1"
