글 작성) mysql min, max

--- a/content/db/220916_db_2/index.mdx
+++ b/content/db/220916_db_2/index.mdx
@@ -20,11 +20,11 @@ SELECT COLUMN_NAMES
 FROM TABLE_NAME
 WHERE COLUMN_NAME IS NOT NULL;
 
-SELECT CustomerName, COntactName, Address
+SELECT CustomerName, ContactName, Address
 FROM Customers
 WHERE Address IS NULL;
 
-SELECT CustomerName, COntactName, Address
+SELECT CustomerName, ContactName, Address
 FROM Customers
 WHERE Address IS NOT NULL;
 ```
