--- a/content/algorithm/221006_algo_1/index.mdx
+++ b/content/algorithm/221006_algo_1/index.mdx
@@ -89,7 +89,7 @@ public class LIS_BS {
 
 		int N = sc.nextInt();
 		int[] arr = new int[N];
-		int[] C = ne int[C];
+		int[] C = new int[N];
 
 		for (int i = 0; i < N; i++) {
 			arr[i] = sc.nextInt();
