update noxon tutorial review

--- a/content/daily/221007_daily_1/index.mdx
+++ b/content/daily/221007_daily_1/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "후기) 22년 넥슨 채용형 인턴십 넥토리얼 2기 코딩 테스트"
+title: "후기) 22년 넥슨 채용형 인턴십 넥토리얼 2기 코딩 테스트 - 불합격"
 date: "2022-10-06"
 category: "daily"
 idx: "37"
@@ -52,3 +52,9 @@ experimentalwarning: stream/web is an experimental feature. this feature could c
 ### 총평
 
 6문제 중 5솔로 최근 봤던 코딩 테스트 중 가장 성적이 좋았다. 아마 무난하게 통과하지 않을까 싶다.
+
+### 결과
+
+이번 주 금요일에 불합격 통보를 받았다.
+
+나름 꽤 잘풀었다고 생각해서 당연히 합격일 줄 알았는데 예상치 못한 결과가 나와 너무 아쉬웠다.
