--- a/content/daily/221017_daily_1/index.mdx
+++ b/content/daily/221017_daily_1/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "후기) 22년 삼성 SDS SW 역량 테스트"
+title: "후기) 22년 삼성 SDS SW 역량 테스트 - 합격"
 date: "2022-10-17"
 category: "daily"
 idx: "41"
@@ -18,3 +18,9 @@ idx: "41"
 문제를 다 풀어도 매 시 정각마다 3분간만 고사장을 나갈 수 있었기 때문에 시간이 조금 남아서 혹시 문제의 출력 예시와 내 코드의 출력이 다른지 한땀한땀 비교도 해보고, 코드에 주석도 달다가 12시 정각이 되어 고사장을 나왔다.
 
 왠지 느낌이 좋다. 면접 준비를 해야할 것 같다.
+
+## 결과
+
+지난주 목요일 코딩 테스트 결과가 나왔다는 문자를 받고 삼성 채용 사이트에서 확인해보니 결과는 합격이었다.
+
+면접은 11월 10일 목요일이다. 첫 기업 채용 면접이라 너무 떨린다.
